[workspace]
resolver = "2"
members = [
    "dns-allowlist",
    "dns-allowlist-common",
    "dns-allowlist-ebpf",
]
default-members = ["dns-allowlist", "dns-allowlist-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
# Aya crates (from git for latest API)
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }

# Network packet parsing (no_std compatible)
network-types = "0.0.7"

# Userspace utilities
anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.18", default-features = false }
clap = { version = "4", default-features = false, features = ["std", "derive"] }
env_logger = { version = "0.11", default-features = false }
log = { version = "0.4", default-features = false }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }

[profile.release.package.dns-allowlist-ebpf]
debug = 2
codegen-units = 1
