[package]
name = "dns-allowlist-ebpf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "dns-allowlist-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = { version = "0.0.7", default-features = false }
dns-allowlist-common = { path = "../dns-allowlist-common" }

[build-dependencies]
aya-build = { workspace = true }
