[package]
name = "hello-xdp-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
hello-xdp-common = { path = "../hello-xdp-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "hello-xdp"
path = "src/main.rs"
