[package]
name = "xdp-firewall-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
xdp-firewall-common = { path = "../xdp-firewall-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdp-firewall"
path = "src/main.rs"
